--- a/modules/components/package.json
+++ b/modules/components/package.json
@@ -33,12 +33,12 @@
   "homepage": "https://github.com/overture-stack/arranger#readme",
   "devDependencies": {
     "@babel/cli": "^7.17.10",
-    "@babel/core": "^7.18.2",
+    "@babel/core": "^7.18.5",
     "@babel/eslint-parser": "^7.18.2",
     "@babel/plugin-proposal-class-properties": "^7.17.12",
     "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
     "@babel/plugin-proposal-optional-chaining": "^7.17.12",
-    "@babel/plugin-transform-runtime": "^7.18.2",
+    "@babel/plugin-transform-runtime": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-flow": "^7.17.12",
     "@babel/preset-react": "^7.17.12",
@@ -49,38 +49,38 @@
     "@storybook/addon-options": "^3.3.11",
     "@storybook/react": "^3.3.3",
     "@types/color": "^3.0.3",
-    "@types/jest": "^27.5.1",
+    "@types/jest": "^28.1.3",
     "@types/lodash": "^4.14.182",
     "@types/pluralize": "^0.0.29",
-    "@types/react": "^18.0.10",
+    "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-spinkit": "^3.0.7",
     "@types/url-join": "^4.0.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^8.16.0",
+    "eslint": "^8.18.0",
     "eslint-import-resolver-babel-module": "^5.3.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "flow-bin": "^0.62.0",
-    "jest": "^27.5.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "jest": "^28.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "storybook-router": "^0.3.3",
-    "ts-jest": "^27.1.4",
+    "ts-jest": "^28.0.5",
     "ttypescript": "^1.5.13",
     "typescript-transform-paths": "^3.3.1"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@tanstack/react-table": "^8.0.0-beta.3",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@tanstack/react-table": "^8.0.0-beta.9",
     "axios": "^0.27.2",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.3.1",
@@ -88,14 +88,14 @@
     "convert-units": "^2.3.4",
     "date-fns": "^2.28.0",
     "downshift": "^1.23.2",
-    "filesize": "^9.0.0",
+    "filesize": "^9.0.9",
     "formik": "^0.11.11",
     "husky": "^4.3.0",
     "jsonpath": "^1.1.1",
     "jsonpath-plus": "^6.0.1",
     "lodash": "^4.17.21",
     "pluralize": "^8.0.0",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
     "ramda": "^0.28.0",
     "react-component-component": "^1.2.1",
@@ -116,7 +116,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.77.2",
     "sqon-builder": "^2.0.1",
-    "typescript": "^4.7.2",
+    "typescript": "^4.7.4",
     "url-join": "^4.0.1",
     "uuid": "^8.3.2"
   },
