--- a/modules/server/package.json
+++ b/modules/server/package.json
@@ -33,10 +33,10 @@
   "homepage": "https://github.com/overture-stack/arranger#readme",
   "dependencies": {
     "@babel/runtime": "^7.18.3",
-    "@elastic/elasticsearch": "^7.5.0",
-    "apollo-server": "^3.7.0",
-    "apollo-server-core": "^2.14.2",
-    "apollo-server-express": "^2.14.2",
+    "@elastic/elasticsearch": "^7.17.0",
+    "apollo-server": "^3.9.0",
+    "apollo-server-core": "^3.9.0",
+    "apollo-server-express": "^3.9.0",
     "axios": "^0.27.2",
     "babel-polyfill": "^6.26.0",
     "chalk": "^2.3.1",
@@ -45,12 +45,12 @@
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "graphql": "^14.5.3",
+    "graphql": "^16.5.0",
     "graphql-fields": "^2.0.3",
-    "graphql-middleware": "^1.7.8",
+    "graphql-middleware": "^6.1.29",
     "graphql-playground-middleware-express": "^1.7.23",
     "graphql-scalars": "^1.17.0",
-    "graphql-tools": "^4.0.8",
+    "graphql-tools": "^8.2.12",
     "graphql-type-json": "^0.3.2",
     "jsonpath": "^1.1.1",
     "lodash": "^4.17.21",
@@ -67,15 +67,15 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
-    "@babel/core": "^7.18.2",
+    "@babel/core": "^7.18.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
     "@babel/plugin-proposal-optional-chaining": "^7.17.12",
-    "@babel/plugin-transform-runtime": "^7.18.2",
+    "@babel/plugin-transform-runtime": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-typescript": "^7.17.12",
     "@babel/register": "^7.17.7",
     "@types/convert-units": "^2.3.5",
-    "@types/jest": "^27.5.1",
+    "@types/jest": "^28.1.3",
     "@types/lodash": "^4.14.182",
     "@types/morgan": "^1.9.3",
     "@types/paralleljs": "0.0.21",
@@ -85,11 +85,11 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "husky": "^4.3.0",
-    "jest": "^27.5.1",
+    "jest": "^28.1.1",
     "nodemon": "^2.0.16",
-    "ts-jest": "^27.1.4",
-    "ts-node": "^10.8.0",
-    "typescript": "^4.7.2",
+    "ts-jest": "^28.0.5",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4",
     "typescript-transform-paths": "^3.3.1"
   },
   "overrides": {
@@ -100,7 +100,10 @@
     "modulePathIgnorePatterns": [
       "dist"
     ],
-    "testURL": "http://localhost/"
+    "testEnvironmentOptions": {
+      "url": "http://localhost/"
+    },
+    "verbose": true
   },
   "prettier": {
     "printWidth": 100,
