--- a/modules/server/package.json
+++ b/modules/server/package.json
@@ -75,6 +75,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@babel/register": "^7.18.9",
     "@types/convert-units": "^2.3.5",
+    "@types/graphql-fields": "^1.3.4",
     "@types/jest": "^29.1.2",
     "@types/lodash": "^4.14.186",
     "@types/morgan": "^1.9.3",
