fix miscelaneous bugs found during integration
bonus: port some features added to Arranger 2
- make date range agg use today as max
- improve date range agg UI features
- improve exporter customisation logic
- adds date handling in TSV exports
- adds array fields functionality

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   "prettier": {
     "printWidth": 100,
     "trailingComma": "all",
+    "semi": true,
     "singleQuote": true
   },
   "husky": {
