--- a/modules/components/package.json
+++ b/modules/components/package.json
@@ -71,6 +71,7 @@
     "storybook-router": "^0.3.3",
     "ts-jest": "^29.0.3",
     "ttypescript": "^1.5.13",
+    "type-fest": "^3.0.0",
     "typescript-transform-paths": "^3.3.1"
   },
   "peerDependencies": {
