--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
+  "version": "1.0.0",
+  "name": "@pilotdataplatform/arranger",
+  "description": "Pilot's version of arranger's faceted search",
+  "author": {
+    "name": "Indoc Research"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/overture-stack/arranger.git"
+    "url": "https://github.com/PilotDataPlatform/arranger.git"
   },
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
