try setting up components package.json for packaging

--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,6 @@
 {
-  "lerna": "2.5.1",
-  "version": "2.19.3",
-  "packages": ["integration-tests/**", "modules/**"]
+  "version": "independent",
+  "packages": ["modules/**"],
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+  "useWorkspaces": false
 }
