--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.0",
+  "version": "1.1.7",
   "name": "@pilotdataplatform/arranger",
   "description": "Pilot's version of arranger's faceted search",
   "author": {
@@ -13,7 +13,8 @@
     "url": "https://github.com/PilotDataPlatform/arranger.git"
   },
   "exports": {
-    "./components/Arranger": "./modules/components/Arranger/src/index.js"
+    "./components/Arranger": "./modules/components/src/Arranger/index.js",
+    "./package.json": "./package.json"
   },
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
@@ -30,7 +31,6 @@
     "tag": "lerna version --force-publish --yes"
   },
   "devDependencies": {
-    "babel-core": "7.0.0-bridge.0",
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.19.4",
@@ -63,7 +63,7 @@
     "graphql-fields": "^2.0.3",
     "husky": "^4.3.0",
     "jest": "^29.2.2",
-    "lerna": "^6.0.1",
+    "lerna": "^6.5.1",
     "node-sass": "^4.14.1",
     "npm-link-shared": "^0.5.3",
     "paralleljs": "^1.1.0",
