Update build and publish push

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -1,5 +1,9 @@
 name: Build and Publish
 
+on:
+  push:
+    branches: [patched-version]
+
 jobs:
   extract-branch-name:
     runs-on: ubuntu-20.04
