--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -28,7 +28,7 @@ jobs:
 
   build-and-push-server-docker-image:
     needs: [extract-branch-name, get-version]
-    if: ${{ needs.extract-branch-name.outputs.branch == 'patched-version'}}
+    if: ${{ needs.extract-branch-name.outputs.branch == 'PILOT-2296'}}
     name: Build server filter Docker image and push to repositories
     runs-on: ubuntu-20.04
     steps:
@@ -71,7 +71,7 @@ jobs:
 
   build-and-push-admin-server-docker-image:
     needs: [ extract-branch-name, get-version ]
-    if: ${{ needs.extract-branch-name.outputs.branch == 'patched-version'}}
+    if: ${{ needs.extract-branch-name.outputs.branch == 'PILOT-2296'}}
     name: Build server filter Docker image and push to repositories
     runs-on: ubuntu-20.04
     steps:
@@ -114,7 +114,7 @@ jobs:
 
   build-and-push-admin-ui-docker-image:
     needs: [ extract-branch-name, get-version ]
-    if: ${{ needs.extract-branch-name.outputs.branch == 'patched-version'}}
+    if: ${{ needs.extract-branch-name.outputs.branch == 'PILOT-2296'}}
     name: Build server filter Docker image and push to repositories
     runs-on: ubuntu-20.04
     steps:
