--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tag": "lerna version --force-publish --yes"
   },
   "devDependencies": {
+    "babel-core": "7.0.0-bridge.0",
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.19.4",
@@ -63,7 +64,7 @@
     "graphql-fields": "^2.0.3",
     "husky": "^4.3.0",
     "jest": "^29.2.2",
-    "lerna": "^6.5.1",
+    "lerna": "^6.0.1",
     "node-sass": "^4.14.1",
     "npm-link-shared": "^0.5.3",
     "paralleljs": "^1.1.0",
