--- a/modules/components/package.json
+++ b/modules/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pilotdataplatform/arranger-components",
-  "version": "1.0.8",
+  "version": "1.0.11",
   "description": "Data Portal Components",
   "main": "dist/index.js",
   "publishConfig": {
@@ -76,6 +76,7 @@
     "jsonpath": "^1.0.0",
     "lodash": "^4.17.20",
     "moment": "^2.21.0",
+    "normalize-url": "^1.9.1",
     "pluralize": "^7.0.0",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.0.2",
