fix mapping utils function and publish to pilot github

--- a/modules/mapping-utils/package.json
+++ b/modules/mapping-utils/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@arranger/mapping-utils",
-  "version": "2.19.3",
+  "name": "@pilotdataplatform/arranger-mapping-utils",
+  "version": "1.0.0",
   "description": "Transform Elasticsearch mappings",
   "main": "dist/index.js",
   "publishConfig": {
-    "access": "public"
+    "registry": "https://npm.pkg.github.com/"
   },
   "scripts": {
     "prepare": "rm -rf dist && mkdir dist && babel src --out-dir dist",
@@ -13,9 +13,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/overture-stack/arranger.git"
+    "url": "https://github.com/PilotDataPlatform/arranger.git"
   },
-  "author": "OICR",
+  "author": "Indoc Research",
   "license": "AGPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/overture-stack/arranger/issues"
