--- a/modules/components/package.json
+++ b/modules/components/package.json
@@ -60,7 +60,7 @@
     "react-dom": "^16.3.0"
   },
   "dependencies": {
-    "@arranger/mapping-utils": "^2.19.3",
+    "@pilotdataplatform/arranger-mapping-utils": "1.0.0",
     "@babel/polyfill": "^7.12.1",
     "ajv": "^6.1.1",
     "antd": "^5.1.7",
