--- a/modules/server/package.json
+++ b/modules/server/package.json
@@ -28,7 +28,7 @@
   "homepage": "https://github.com/overture-stack/arranger#readme",
   "dependencies": {
     "@arranger/admin": "^2.19.3",
-    "@arranger/mapping-utils": "^2.19.3",
+    "@pilotdataplatform/arranger-mapping-utils": "1.0.0",
     "@arranger/middleware": "^2.19.3",
     "@arranger/schema": "^2.19.3",
     "@babel/polyfill": "^7.12.1",
