--- a/modules/components/package.json
+++ b/modules/components/package.json
@@ -60,13 +60,14 @@
     "react-dom": "^16.3.0"
   },
   "dependencies": {
-    "@pilotdataplatform/arranger-mapping-utils": "1.0.0",
     "@babel/polyfill": "^7.12.1",
+    "@pilotdataplatform/arranger-mapping-utils": "1.0.0",
     "ajv": "^6.1.1",
     "antd": "^5.1.7",
     "classnames": "^2.2.5",
     "convert-units": "^2.3.4",
     "date-fns": "^2.21.1",
+    "dayjs": "^1.11.7",
     "downshift": "^1.23.2",
     "emotion": "^9.2.12",
     "filesize": "^3.5.11",
@@ -75,14 +76,12 @@
     "husky": "^4.3.0",
     "jsonpath": "^1.0.0",
     "lodash": "^4.17.20",
-    "moment": "^2.21.0",
     "normalize-url": "^1.9.1",
     "pluralize": "^7.0.0",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.0.2",
     "ramda": "^0.26.1",
     "react-component-component": "^1.2.1",
-    "react-datepicker": "^3.8.0",
     "react-grid-layout": "^0.16.5",
     "react-icons": "^2.2.7",
     "react-input-range": "^1.3.0",
