--- a/.github/workflows/publish-components.yml
+++ b/.github/workflows/publish-components.yml
@@ -5,17 +5,23 @@ on:
     branches: [portal-ui]
     paths:
       - 'modules/components/**'
+
+env:
+  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        # default directory for run commands
+        working-directory: modules/components
     steps:
       - uses: actions/checkout@v3
       # Setup .npmrc file to publish to npm
       - uses: actions/setup-node@v3
         with:
           node-version: '14.19.0'
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: 'https://npm.pkg.github.com'
       - run: npm ci
       - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
