--- a/.github/workflows/pilot-pipeline-admin-ui.yml
+++ b/.github/workflows/pilot-pipeline-admin-ui.yml
@@ -60,11 +60,11 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-             indocpilot.azurecr.io/arranger
+             indocpilot.azurecr.io/arranger/arranger-admin-ui
           # generate Docker tags based on the following events/attributes
           sep-tags: ','
           tags: |
-            type=raw,prefix=admin-ui-,suffix=,value=${{needs.get-version.outputs.app_version}}
+            type=raw,prefix=arranger-admin-ui-,suffix=,value=${{needs.get-version.outputs.app_version}}
 #      - name: Image digest
 #        run: echo ${{ steps.meta.outputs.tags }}
       - name: Image digest
