--- a/.github/workflows/pilot-pipeline-admin-server.yml
+++ b/.github/workflows/pilot-pipeline-admin-server.yml
@@ -3,12 +3,12 @@ name: CI pipeline admin server
 on:
   push:
     branches:
-      - patched-version
+      - pilot_develop
     paths:
       - 'modules/admin/**'
   pull_request:
     branches:
-      - patched-version
+      - pilot_develop
     paths:
       - 'modules/admin/**'
 
@@ -35,12 +35,11 @@ jobs:
         shell: bash
         run: |
           BRANCH=${GITHUB_REF#refs/heads/}
-          BASE_VERSION=`sed -n 's/^ *"version":.*"\([^"]*\)".*/\1/p' package.json`
+          BASE_VERSION=`sed -n 's/^ *"version":.*"\([^"]*\)".*/\1/p' modules/admin/package.json`
           echo "app_version=$BASE_VERSION" >> $GITHUB_OUTPUT
 
-  build-and-push-docker-image:
+  build-and-push-admin-server-image:
     needs: [extract-branch-name, get-version]
-    if: ${{ needs.extract-branch-name.outputs.branch == 'patched-version'}}
     name: Build admin server Docker image and push to repositories
     runs-on: ubuntu-20.04
     steps:
@@ -52,7 +51,7 @@ jobs:
       - name: Login to Github Packages
         uses: docker/login-action@v2
         with:
-          registry: pilotdataplatform.azurecr.io
+          registry: indocpilot.azurecr.io
           username: ${{ secrets.ACR_CLIENT }}
           password: ${{ secrets.ACR_SECRET }}
       - name: Docker metadata
@@ -61,7 +60,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            pilotdataplatform.azurecr.io/arranger/arranger-admin-server
+            indocpilot.azurecr.io/arranger/arranger-admin-server
           # generate Docker tags based on the following events/attributes
           sep-tags: ','
           tags: |
@@ -122,7 +121,7 @@ jobs:
           fi
 
   trigger_pilot_dev_deployment:
-    needs: [build-and-push-docker-image, get-version]
+    needs: [build-and-push-admin-server-image, get-version]
     runs-on: ubuntu-20.04
     if: github.event_name != 'pull_request'
     steps:
