--- a/modules/components/package.json
+++ b/modules/components/package.json
@@ -44,6 +44,7 @@
     "@storybook/addon-actions": "^3.3.8",
     "@storybook/addon-options": "^3.3.11",
     "@storybook/react": "^3.3.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.5",
     "babel-plugin-emotion": "^9.2.11",
